# -RDK-X5-YOLO-

./: README.md  README_cn.md
USER（小车运行代码）/: AllHeader.h  main.c  stm32_k210_AI.uvguix.86181  stm32_k210_AI.uvguix.Administrator  stm32_k210_AI.uvoptx  stm32_k210_AI.uvprojx
USER（小车运行代码）/Listings/: STM32_K210_AI.map  startup_stm32f10x_hd.lst
test（yolov8模型在X5部署运行代码）/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  vio2display
yaml与bin模型/: config.yaml
